修改临时车流水展示

--- a/src/main/resources/static/editor-app/libs/bootstrap_3.1.1/css/bootstrap.css
+++ b/src/main/resources/static/editor-app/libs/bootstrap_3.1.1/css/bootstrap.css
@@ -4321,6 +4321,9 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 .label-danger {
   background-color: #d9534f;
 }
+.label-blue {
+  background-color: #3071a9;
+}
 .label-danger[href]:hover,
 .label-danger[href]:focus {
   background-color: #c9302c;
