--- a/src/main/resources/templates/system/depositRecord/depositRecord.html
+++ b/src/main/resources/templates/system/depositRecord/depositRecord.html
@@ -9,9 +9,9 @@
 				<div class="ibox-body">
 					<div class="fixed-table-toolbar">
 						<div class="columns pull-left">
-							<button shiro:hasPermission="sys:depositRecord:add" type="button" class="btn  btn-primary" onclick="add()">
-								<i class="fa fa-plus" aria-hidden="true"></i>添加
-							</button>
+							<!--<button shiro:hasPermission="sys:depositRecord:add" type="button" class="btn  btn-primary" onclick="add()">-->
+								<!--<i class="fa fa-plus" aria-hidden="true"></i>添加-->
+							<!--</button>-->
 							<!--<button shiro:hasPermission="sys:depositRecord:batchRemove" type="button" class="btn  btn-danger"-->
 								<!--onclick="batchRemove()">-->
 								<!--<i class="fa fa-trash" aria-hidden="true"></i>删除-->
