--- a/src/main/resources/templates/system/parking/add.html
+++ b/src/main/resources/templates/system/parking/add.html
@@ -15,19 +15,31 @@
 									<input id="name" name="name" class="form-control" type="text">
 								</div>
 							</div>
-														<div class="form-group">	
-								<label class="col-sm-3 control-label">位置：</label>
+							<div class="form-group">
+								<label class="col-sm-3 control-label">停车场地址：</label>
 								<div class="col-sm-8">
 									<input id="location" name="location" class="form-control" type="text">
 								</div>
 							</div>
-														<div class="form-group">	
-								<label class="col-sm-3 control-label">负责人联系方式：</label>
+							<div class="form-group">
+								<label class="col-sm-3 control-label">项目联系人：</label>
+								<div class="col-sm-8">
+									<input id="contacts" name="contacts" class="form-control" type="text">
+								</div>
+							</div>
+							<div class="form-group">
+								<label class="col-sm-3 control-label">联系电话：</label>
 								<div class="col-sm-8">
 									<input id="phone" name="phone" class="form-control" type="text">
 								</div>
 							</div>
-																					<div class="form-group">
+							<div class="form-group">
+								<label class="col-sm-3 control-label">联系邮箱：</label>
+								<div class="col-sm-8">
+									<input id="email" name="email" class="form-control" type="text">
+								</div>
+							</div>
+							<div class="form-group">
 								<div class="col-sm-8 col-sm-offset-3">
 									<button type="submit" class="btn btn-primary">提交</button>
 								</div>
