--- a/src/main/resources/templates/system/passageway/add.html
+++ b/src/main/resources/templates/system/passageway/add.html
@@ -12,13 +12,13 @@
 							<div class="form-group">	
 								<label class="col-sm-3 control-label">名字：</label>
 								<div class="col-sm-8">
-									<input id="name" name="name" class="form-control" type="text">
+									<label><input id="name" name="name" class="form-control" type="text"></label>
 								</div>
 							</div>
 														<div class="form-group">	
 								<label class="col-sm-3 control-label">摄像头IP：</label>
 								<div class="col-sm-8">
-									<input id="ip" name="ip" class="form-control" type="text">
+									<label><input id="ip" name="ip" class="form-control" type="text"></label>
 								</div>
 							</div>
 							<div class="form-group">
