--- a/src/main/resources/templates/system/business/business.html
+++ b/src/main/resources/templates/system/business/business.html
@@ -26,7 +26,7 @@
 
 							<div class="columns pull-right col-md-2 nopadding">
 								<input id="searchName" type="text" class="form-control"
-									placeholder="姓名">
+									placeholder="请输入姓名">
 							</div>
 						</div>
 						<table id="exampleTable" data-mobile-responsive="true">
