--- a/src/main/resources/templates/system/business/add.html
+++ b/src/main/resources/templates/system/business/add.html
@@ -12,7 +12,7 @@
 							<input id="id" name="id" type="hidden">
 							<input id="type" name="type" value="1" type="hidden">
 							<div class="form-group">
-								<label class="col-sm-3 control-label">姓名：</label>
+								<label class="col-sm-3 control-label">用户名：</label>
 								<div class="col-sm-8">
 									<input id="username" name="username" class="form-control"
 										type="text">
@@ -26,7 +26,7 @@
 								</div>
 							</div>
 							<div class="form-group">
-								<label class="col-sm-3 control-label">商户名字：</label>
+								<label class="col-sm-3 control-label">商户名称：</label>
 								<div class="col-sm-8">
 									<input id="name" name="name" class="form-control" type="text">
 								</div>
