--- a/src/main/resources/templates/system/business/edit.html
+++ b/src/main/resources/templates/system/business/edit.html
@@ -11,7 +11,7 @@
 						<input id="id" name="id" th:value="${user.id}"
 							type="hidden">
 						<div class="form-group">
-							<label class="col-sm-3 control-label">姓名：</label>
+							<label class="col-sm-3 control-label">用户名：</label>
 							<div class="col-sm-8">
 								<input id="username" name="username" class="form-control"
 									type="text" th:value="${user.username}" readonly>
@@ -32,7 +32,7 @@
 							</div>
 						</div>
 						<div class="form-group">
-							<label class="col-sm-3 control-label">负责人：</label>
+							<label class="col-sm-3 control-label">商户负责人：</label>
 							<div class="col-sm-8">
 								<input id="principal" name="principal" class="form-control" type="text"
 									   th:value="${user.principal}">
