--- a/src/main/resources/templates/system/car/business/add.html
+++ b/src/main/resources/templates/system/car/business/add.html
@@ -10,6 +10,18 @@
 					<div class="ibox-content">
 						<form class="form-horizontal m-t" id="signupForm">
 							<input id="parkingType" name="parkingType" value="3" type="hidden">
+							<div class="form-group">
+								<label class="col-sm-3 control-label">客户姓名：</label>
+								<div class="col-sm-8">
+									<input id="name" name="name" class="form-control" type="text">
+								</div>
+							</div>
+							<div class="form-group">
+								<label class="col-sm-3 control-label">客户电话：</label>
+								<div class="col-sm-8">
+									<input id="phone" name="phone" class="form-control" type="text">
+								</div>
+							</div>
 							<div class="form-group">	
 								<label class="col-sm-3 control-label">车牌号：</label>
 								<div class="col-sm-8">
@@ -17,7 +29,7 @@
 								</div>
 							</div>
 							<div class="form-group">
-								<label class="col-sm-3 control-label">免费时长：</label>
+								<label class="col-sm-3 control-label">免费时长(分钟)：</label>
 								<div class="col-sm-8">
 									<input id="freeTime" name="freeTime" class="form-control" type="text">
 								</div>
