--- a/src/main/resources/templates/system/car/long/edit.html
+++ b/src/main/resources/templates/system/car/long/edit.html
@@ -11,6 +11,28 @@
 						<form class="form-horizontal m-t" id="signupForm">
 						<input id="id" name="id" th:value="${car.id}"  type="hidden">
 							<input id="parkingType" name="parkingType" value="1" type="hidden">
+							<div class="form-group">
+								<label class="col-sm-3 control-label">停车场</label>
+								<div class="col-sm-8">
+									<label th:each="parking:${parkingList}" class="radio-inline">
+										<input  name="parkingId" type="radio" th:value="${parking.id}"
+												th:text="${parking.name}" th:field="*{car.parkingId}">
+									</label>
+								</div>
+							</div>
+							<div class="form-group">
+								<label class="col-sm-3 control-label">车主姓名：</label>
+								<div class="col-sm-8">
+									<input id="name" name="name" th:value="${car.name}" class="form-control" type="text">
+								</div>
+							</div>
+							<div class="form-group">
+								<label class="col-sm-3 control-label">联系方式：</label>
+								<div class="col-sm-8">
+									<input id="phone" name="phone" th:value="${car.phone}" class="form-control" type="text">
+								</div>
+							</div>
+
 							<div class="form-group">	
 								<label class="col-sm-3 control-label">车牌号：</label>
 								<div class="col-sm-8">
@@ -29,15 +51,7 @@
 									<input name="endDate" type="text" class="demo-input" placeholder="请选择失效日期" id="endDate">
 								</div>
 							</div>
-							<div class="form-group">
-								<label class="col-sm-3 control-label">停车场</label>
-								<div class="col-sm-8">
-									<label th:each="parking:${parkingList}" class="radio-inline">
-										<input  name="parkingId" type="radio" th:value="${parking.id}"
-												th:text="${parking.name}" th:field="*{car.parkingId}">
-									</label>
-								</div>
-							</div>
+
 							<div class="form-group">
 								<label class="col-sm-3 control-label">状态:</label>
 								<div class="col-sm-8">
