--- a/src/main/resources/templates/system/business/edit.html
+++ b/src/main/resources/templates/system/business/edit.html
@@ -11,14 +11,14 @@
 						<input id="id" name="id" th:value="${user.id}"
 							type="hidden">
 						<div class="form-group">
-							<label class="col-sm-3 control-label">用户名：</label>
+							<label class="col-sm-3 control-label">登录用户名：</label>
 							<div class="col-sm-8">
 								<input id="username" name="username" class="form-control"
 									type="text" th:value="${user.username}" readonly>
 							</div>
 						</div>
 						<div class="form-group">
-							<label class="col-sm-3 control-label">商户名字：</label>
+							<label class="col-sm-3 control-label">商户名称：</label>
 							<div class="col-sm-8">
 								<input id="name" name="name" class="form-control" type="text"
 									   th:value="${user.name}">
