--- a/src/main/resources/templates/system/car/business/edit.html
+++ b/src/main/resources/templates/system/car/business/edit.html
@@ -12,12 +12,29 @@
 						<input id="id" name="id" th:value="${car.id}"  type="hidden">
 							<input id="parkingType" name="parkingType" value="3" type="hidden">
 							<div class="form-group">
+								<label class="col-sm-3 control-label">客户姓名：</label>
+								<div class="col-sm-8">
+									<input id="name" name="name" th:value="${car.name}" class="form-control" type="text">
+								</div>
+							</div>
+							<div class="form-group">
+								<label class="col-sm-3 control-label">客户电话：</label>
+								<div class="col-sm-8">
+									<input id="phone" name="phone" th:value="${car.phone}" class="form-control" type="text">
+								</div>
+							</div>
+							<div class="form-group">
 								<label class="col-sm-3 control-label">车牌号：</label>
 								<div class="col-sm-8">
 									<input id="number" name="number" th:value="${car.number}" class="form-control" type="text">
 								</div>
 							</div>
-
+							<div class="form-group">
+								<label class="col-sm-3 control-label">免费时长(分钟)：</label>
+								<div class="col-sm-8">
+									<input id="freeTime" name="freeTime" th:value="${car.freeTime}" class="form-control" type="text">
+								</div>
+							</div>
 							<div class="form-group">
 								<label class="col-sm-3 control-label">状态:</label>
 								<div class="col-sm-8">
