--- a/src/main/resources/templates/system/parking/edit.html
+++ b/src/main/resources/templates/system/parking/edit.html
@@ -19,25 +19,25 @@
 							<div class="form-group">
 								<label class="col-sm-3 control-label">停车场地址：</label>
 								<div class="col-sm-8">
-									<input id="location" name="location" class="form-control" type="text">
+									<input id="location" name="location" th:value="${parking.location}" class="form-control" type="text">
 								</div>
 							</div>
 							<div class="form-group">
 								<label class="col-sm-3 control-label">项目联系人：</label>
 								<div class="col-sm-8">
-									<input id="contacts" name="contacts" class="form-control" type="text">
+									<input id="contacts" name="contacts" th:value="${parking.contacts}" class="form-control" type="text">
 								</div>
 							</div>
 							<div class="form-group">
 								<label class="col-sm-3 control-label">联系电话：</label>
 								<div class="col-sm-8">
-									<input id="phone" name="phone" class="form-control" type="text">
+									<input id="phone" name="phone" th:value="${parking.phone}" class="form-control" type="text">
 								</div>
 							</div>
 							<div class="form-group">
 								<label class="col-sm-3 control-label">联系邮箱：</label>
 								<div class="col-sm-8">
-									<input id="email" name="email" class="form-control" type="text">
+									<input id="email" name="email" th:value="${parking.email}" class="form-control" type="text">
 								</div>
 							</div>
 							<div class="form-group">
