--- a/src/main/resources/templates/system/passageway/add.html
+++ b/src/main/resources/templates/system/passageway/add.html
@@ -9,18 +9,6 @@
 				<div class="ibox float-e-margins">
 					<div class="ibox-content">
 						<form class="form-horizontal m-t" id="signupForm">
-							<div class="form-group">	
-								<label class="col-sm-3 control-label">名字：</label>
-								<div class="col-sm-8">
-									<label><input id="name" name="name" class="form-control" type="text"></label>
-								</div>
-							</div>
-														<div class="form-group">	
-								<label class="col-sm-3 control-label">摄像头IP：</label>
-								<div class="col-sm-8">
-									<label><input id="ip" name="ip" class="form-control" type="text"></label>
-								</div>
-							</div>
 							<div class="form-group">
 								<label class="col-sm-3 control-label">停车场</label>
 								<div class="col-sm-8">
@@ -31,13 +19,25 @@
 								</div>
 							</div>
 							<div class="form-group">
-								<label class="col-sm-3 control-label">出入口:</label>
+								<label class="col-sm-3 control-label">出入口类别:</label>
 								<div class="col-sm-8">
 									<label class="radio-inline"> <input type="radio"
 																		name="type" value="0" /> 入口
 									</label> <label class="radio-inline"> <input type="radio"
 																				 name="type" value="1" /> 出口
 								</label>
+								</div>
+							</div>
+							<div class="form-group">	
+								<label class="col-sm-3 control-label">出入口名称：</label>
+								<div class="col-sm-8">
+									<label><input id="name" name="name" class="form-control" type="text"></label>
+								</div>
+							</div>
+														<div class="form-group">	
+								<label class="col-sm-3 control-label">摄像头IP：</label>
+								<div class="col-sm-8">
+									<label><input id="ip" name="ip" class="form-control" type="text"></label>
 								</div>
 							</div>
 																					<div class="form-group">
