--- a/src/main/resources/templates/system/passageway/edit.html
+++ b/src/main/resources/templates/system/passageway/edit.html
@@ -11,7 +11,7 @@
 						<form class="form-horizontal m-t" id="signupForm">
 						<input id="id" name="id" th:value="${passageway.id}"  type="hidden">
 							<div class="form-group">	
-								<label class="col-sm-3 control-label">名字：</label>
+								<label class="col-sm-3 control-label">出入口名称：</label>
 								<div class="col-sm-8">
 									<input id="name" name="name" th:value="${passageway.name}" class="form-control" type="text">
 								</div>
@@ -23,16 +23,7 @@
 								</div>
 							</div>
 							<div class="form-group">
-								<label class="col-sm-3 control-label">停车场</label>
-								<div class="col-sm-8">
-									<label th:each="parking:${parkingList}" class="radio-inline">
-										<input  name="parkingId" type="radio" th:value="${parking.id}"
-												th:text="${parking.name}" th:field="*{passageway.parkingId}">
-									</label>
-								</div>
-							</div>
-							<div class="form-group">
-								<label class="col-sm-3 control-label">出入口:</label>
+								<label class="col-sm-3 control-label">出入口类别:</label>
 								<div class="col-sm-8">
 									<label class="radio-inline"> <input
 											th:field="*{passageway.type}" type="radio" name="type" value="0" />
@@ -41,6 +32,15 @@
 										th:field="*{passageway.type}" type="radio" name="type" value="1" />
 									出口
 								</label>
+								</div>
+							</div>
+							<div class="form-group">
+								<label class="col-sm-3 control-label">停车场</label>
+								<div class="col-sm-8">
+									<label th:each="parking:${parkingList}" class="radio-inline">
+										<input  name="parkingId" type="radio" th:value="${parking.id}"
+												th:text="${parking.name}" th:field="*{passageway.parkingId}">
+									</label>
 								</div>
 							</div>
 																					<div class="form-group">
