--- a/src/main/resources/templates/system/car/business/car.html
+++ b/src/main/resources/templates/system/car/business/car.html
@@ -9,10 +9,10 @@
 				<div class="ibox-body">
 					<div class="fixed-table-toolbar">
 						<div class="columns pull-left">
-							<button shiro:hasPermission="sys:car:add" type="button" class="btn  btn-primary" onclick="add()">
+							<button shiro:hasPermission="sys:car:business:add" type="button" class="btn  btn-primary" onclick="add()">
 								<i class="fa fa-plus" aria-hidden="true"></i>添加
 							</button>
-							<button shiro:hasPermission="sys:car:batchRemove" type="button" class="btn  btn-danger"
+							<button shiro:hasPermission="sys:car:business:batchRemove" type="button" class="btn  btn-danger"
 								onclick="batchRemove()">
 								<i class="fa fa-trash" aria-hidden="true"></i>删除
 							</button>
@@ -39,17 +39,17 @@
 				var s_resetPwd_h = 'hidden';
 			</script>
 		</div>
-		<div shiro:hasPermission="sys:car:edit">
+		<div shiro:hasPermission="sys:car:business:edit">
 			<script type="text/javascript">
 				s_edit_h = '';
 			</script>
 		</div>
-		<div shiro:hasPermission="sys:car:remove">
+		<div shiro:hasPermission="sys:car:business:remove">
 			<script type="text/javascript">
 				var s_remove_h = '';
 			</script>
 		</div>
-		<div shiro:hasPermission="sys:car:resetPwd">
+		<div shiro:hasPermission="sys:car:business:resetPwd">
 			<script type="text/javascript">
 				var s_resetPwd_h = '';
 			</script>
