--- a/src/main/resources/templates/system/car/vip/add.html
+++ b/src/main/resources/templates/system/car/vip/add.html
@@ -9,7 +9,8 @@
 				<div class="ibox float-e-margins">
 					<div class="ibox-content">
 						<form class="form-horizontal m-t" id="signupForm">
-							<input id="parkingType" name="parkingType" value="1" type="hidden">
+							<input id="parkingType" name="parkingType" value="2" type="hidden">
+							<input id="infieldPermission" name="infieldPermission" value="1" type="hidden">
 							<div class="form-group">
 								<label class="col-sm-3 control-label">停车场</label>
 								<div class="col-sm-8">
@@ -26,18 +27,6 @@
 								</div>
 							</div>
 							<div class="form-group">
-								<label class="col-sm-3 control-label">生效日期：</label>
-								<div class="col-sm-8">
-									<label><input id="beginDate" name="beginDate" type="text" class="demo-input" placeholder="请选择生效日期"></label>
-								</div>
-							</div>
-							<div class="form-group">
-								<label class="col-sm-3 control-label">失效日期：</label>
-								<div class="col-sm-8">
-									<label><input id="endDate" name="endDate" type="text" class="demo-input" placeholder="请选择失效日期"></label>
-								</div>
-							</div>
-							<div class="form-group">
 								<label class="col-sm-3 control-label">车主姓名：</label>
 								<div class="col-sm-8">
 									<input id="name" name="name" class="form-control" type="text">
@@ -50,21 +39,9 @@
 								</div>
 							</div>
 							<div class="form-group">
-								<label class="col-sm-3 control-label">公司名称：</label>
-								<div class="col-sm-8">
-									<input id="corporateName" name="corporateName" class="form-control" type="text">
-								</div>
-							</div>
-							<div class="form-group">
 								<label class="col-sm-3 control-label">备注：</label>
 								<div class="col-sm-8">
 									<input id="remarks" name="remarks" class="form-control" type="text">
-								</div>
-							</div>
-							<div class="form-group">
-								<label class="col-sm-3 control-label">月租车分类：</label>
-								<div class="col-sm-8">
-									<input id="sort" name="sort" class="form-control" type="text">
 								</div>
 							</div>
 							<div class="form-group">
@@ -72,13 +49,6 @@
 								<div class="col-sm-8">
 									<label class="radio-inline"> <input type="radio" name="status" value="1" checked /> 正常 </label>
 									<label class="radio-inline"> <input type="radio" name="status" value="0" /> 禁用 </label>
-								</div>
-							</div>
-							<div class="form-group">
-								<label class="col-sm-3 control-label">内场权限:</label>
-								<div class="col-sm-8">
-									<label class="radio-inline"> <input type="radio" name="infieldPermission" value="1" checked /> 有 </label>
-									<label class="radio-inline"> <input type="radio" name="infieldPermission" value="0" /> 无 </label>
 								</div>
 							</div>
 								<div class="form-group">
@@ -93,7 +63,7 @@
 	</div>
 	</div>
 	<div th:include="include::footer"></div>
-	<script type="text/javascript" src="/js/appjs/sys/car/long/add.js">
+	<script type="text/javascript" src="/js/appjs/sys/car/vip/add.js">
 	</script>
 	<script src="/js/appjs/common/laydate/laydate.js"></script>
 	<script>
