--- a/src/main/resources/templates/system/car/vip/edit.html
+++ b/src/main/resources/templates/system/car/vip/edit.html
@@ -10,7 +10,8 @@
 					<div class="ibox-content">
 						<form class="form-horizontal m-t" id="signupForm">
 						<input id="id" name="id" th:value="${car.id}"  type="hidden">
-							<input id="parkingType" name="parkingType" value="1" type="hidden">
+							<input id="parkingType" name="parkingType" value="2" type="hidden">
+							<input id="infieldPermission" name="infieldPermission" value="1" type="hidden">
 							<div class="form-group">
 								<label class="col-sm-3 control-label">停车场</label>
 								<div class="col-sm-8">
@@ -27,18 +28,6 @@
 								</div>
 							</div>
 							<div class="form-group">
-								<label class="col-sm-3 control-label">生效日期：</label>
-								<div class="col-sm-8">
-									<input name="beginDate" type="text" class="demo-input" placeholder="请选择生效日期" id="beginDate">
-								</div>
-							</div>
-							<div class="form-group">
-								<label class="col-sm-3 control-label">失效日期：</label>
-								<div class="col-sm-8">
-									<input name="endDate" type="text" class="demo-input" placeholder="请选择失效日期" id="endDate">
-								</div>
-							</div>
-							<div class="form-group">
 								<label class="col-sm-3 control-label">车主姓名：</label>
 								<div class="col-sm-8">
 									<input id="name" name="name" th:value="${car.name}" class="form-control" type="text">
@@ -51,21 +40,9 @@
 								</div>
 							</div>
 							<div class="form-group">
-								<label class="col-sm-3 control-label">公司名称：</label>
-								<div class="col-sm-8">
-									<input id="corporateName" name="corporateName" th:value="${car.corporateName}" class="form-control" type="text">
-								</div>
-							</div>
-							<div class="form-group">
 								<label class="col-sm-3 control-label">备注：</label>
 								<div class="col-sm-8">
 									<input id="remarks" name="remarks" th:value="${car.remarks}" class="form-control" type="text">
-								</div>
-							</div>
-							<div class="form-group">
-								<label class="col-sm-3 control-label">月租车分类：</label>
-								<div class="col-sm-8">
-									<input id="sort" name="sort" th:value="${car.sort}" class="form-control" type="text">
 								</div>
 							</div>
 							<div class="form-group">
@@ -81,18 +58,6 @@
 								</div>
 							</div>
 							<div class="form-group">
-								<label class="col-sm-3 control-label">内场权限:</label>
-								<div class="col-sm-8">
-									<label class="radio-inline"> <input
-											th:field="*{car.infieldPermission}" type="radio" name="infieldPermission" value="1" />
-										有
-									</label> <label class="radio-inline"> <input
-										th:field="*{car.infieldPermission}" type="radio" name="infieldPermission" value="0" />
-									无
-								</label>
-								</div>
-							</div>
-							<div class="form-group">
 								<div class="col-sm-8 col-sm-offset-3">
 									<button type="submit" class="btn btn-primary">提交</button>
 								</div>
@@ -104,7 +69,7 @@
 	</div>
 	</div>
 	<div th:include="include::footer"></div>
-	<script type="text/javascript" src="/js/appjs/sys/car/long/edit.js">
+	<script type="text/javascript" src="/js/appjs/sys/car/vip/edit.js">
 	</script>
 	<script src="/js/appjs/common/laydate/laydate.js"></script>
 	<script>
