月租车多列查询模糊查询

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -37,16 +37,16 @@
                     欢迎光临 <strong>CCTower 智慧社区</strong>
                 </h3>
                 <ul class="m-b">
-                    <li><i class="fa fa-arrow-circle-o-right m-r-xs"></i>智慧停车</li>
-                    <li><i class="fa fa-arrow-circle-o-right m-r-xs"></i>大厦安防</li>
-                    <li><i class="fa fa-arrow-circle-o-right m-r-xs"></i>闸机通道</li>
+                    <li><i class="fa fa-arrow-circle-o-right m-r-xs"></i>自助购物系统</li>
+                    <li><i class="fa fa-arrow-circle-o-right m-r-xs"></i>智能停车收费系统</li>
+                    <!--<li><i class="fa fa-arrow-circle-o-right m-r-xs"></i>闸机通道</li>-->
                 </ul>
             </div>
         </div>
         <div class="col-sm-5">
             <form id="signupForm">
                 <h3 class="text-center">用户登录</h3>
-                <p class="m-t-md text-center">Welcome CCTower community</p>
+                <p class="m-t-md text-center">Welcome CCTower Community</p>
                 <input type="text" name="username" class="form-control uname"
                        th:value="${username}"/>
                 <input type="password" name="password"
@@ -57,7 +57,7 @@
         </div>
     </div>
     <div class="signup-footer">
-        <div class="pull-left">&copy; 2019 All Rights Reserved. 诺泽科技
+        <div class="pull-left">&copy; 2019 All Rights Reserved. 诺泽电子科技
         </div>
     </div>
 </div>
