--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -21,10 +21,10 @@
     <div style="padding: 10px 0 20px 10px;">
         <h3>&nbsp;&nbsp;&nbsp;CCTower介绍</h3>
         <ul>
-            <li>智能停车系统建设</li>
-            <li>写字楼闸机设计建设</li>
-            <li>数字化智慧社区建设</li>
-            <li>合作请联系: cctower@tom.com</li>
+            <li>自助购物系统</li>
+            <li>智能停车收费系统</li>
+            <!--<li>数字化智慧社区建设</li>-->
+            <li>合作请联系: cctower@tom.com 18511917728</li>
         </ul>
     </div>
 </div>
