--- a/src/main/resources/templates/system/car/long/car.html
+++ b/src/main/resources/templates/system/car/long/car.html
@@ -31,7 +31,7 @@
 									<option value="name">车主姓名</option>
 									<option value="phone">联系方式</option>
 									<option value="corporateName">公司名称</option>
-									<option value="sort">月租车分类</option>
+									<option value="classification">月租车分类</option>
 								</select>
 							</div>
 						<table id="exampleTable" data-mobile-responsive="true">
