--- a/src/main/resources/templates/system/car/long/add.html
+++ b/src/main/resources/templates/system/car/long/add.html
@@ -64,7 +64,7 @@
 							<div class="form-group">
 								<label class="col-sm-3 control-label">月租车分类：</label>
 								<div class="col-sm-8">
-									<input id="sort" name="sort" class="form-control" type="text">
+									<input id="classification" name="classification" class="form-control" type="text">
 								</div>
 							</div>
 							<div class="form-group">
