--- a/src/main/resources/templates/system/car/long/edit.html
+++ b/src/main/resources/templates/system/car/long/edit.html
@@ -65,7 +65,7 @@
 							<div class="form-group">
 								<label class="col-sm-3 control-label">月租车分类：</label>
 								<div class="col-sm-8">
-									<input id="sort" name="sort" th:value="${car.sort}" class="form-control" type="text">
+									<input id="sort" name="classification" th:value="${car.classification}" class="form-control" type="text">
 								</div>
 							</div>
 							<div class="form-group">
