--- a/src/main/resources/templates/system/car/long/car.html
+++ b/src/main/resources/templates/system/car/long/car.html
@@ -32,6 +32,7 @@
 									<option value="phone">联系方式</option>
 									<option value="corporateName">公司名称</option>
 									<option value="classification">月租车分类</option>
+									<option value="parkingName">停车场名称</option>
 								</select>
 							</div>
 						<table id="exampleTable" data-mobile-responsive="true">
