--- a/src/main/resources/templates/system/car/vip/add.html
+++ b/src/main/resources/templates/system/car/vip/add.html
@@ -39,9 +39,21 @@
 								</div>
 							</div>
 							<div class="form-group">
+								<label class="col-sm-3 control-label">公司名称：</label>
+								<div class="col-sm-8">
+									<input id="corporateName" name="corporateName" class="form-control" type="text">
+								</div>
+							</div>
+							<div class="form-group">
 								<label class="col-sm-3 control-label">备注：</label>
 								<div class="col-sm-8">
 									<input id="remarks" name="remarks" class="form-control" type="text">
+								</div>
+							</div>
+							<div class="form-group">
+								<label class="col-sm-3 control-label">VIP分类：</label>
+								<div class="col-sm-8">
+									<input id="classification" name="classification" class="form-control" type="text">
 								</div>
 							</div>
 							<div class="form-group">
