--- a/src/main/resources/templates/system/car/vip/car.html
+++ b/src/main/resources/templates/system/car/vip/car.html
@@ -22,7 +22,18 @@
 						</div>
 						<div class="columns pull-right col-md-2 nopadding">
 							<input id="searchName" type="text" class="form-control"
-								placeholder="请输入车牌号">
+								placeholder="请输入">
+						</div>
+						<div class="pull-right search col-md-2 nopadding">
+							<select id="query" name="query" class="form-control">
+								<option value="">请选择查询</option>
+								<option value="number">车牌号</option>
+								<option value="name">车主姓名</option>
+								<option value="phone">联系方式</option>
+								<option value="corporateName">公司名称</option>
+								<option value="classification">VIP分类</option>
+								<option value="parkingName">停车场名称</option>
+							</select>
 						</div>
 					<table id="exampleTable" data-mobile-responsive="true">
 					</table>
