--- a/src/main/resources/templates/system/car/vip/edit.html
+++ b/src/main/resources/templates/system/car/vip/edit.html
@@ -40,9 +40,21 @@
 								</div>
 							</div>
 							<div class="form-group">
+								<label class="col-sm-3 control-label">公司名称：</label>
+								<div class="col-sm-8">
+									<input id="corporateName" name="corporateName" th:value="${car.corporateName}" class="form-control" type="text">
+								</div>
+							</div>
+							<div class="form-group">
 								<label class="col-sm-3 control-label">备注：</label>
 								<div class="col-sm-8">
 									<input id="remarks" name="remarks" th:value="${car.remarks}" class="form-control" type="text">
+								</div>
+							</div>
+							<div class="form-group">
+								<label class="col-sm-3 control-label">VIP分类：</label>
+								<div class="col-sm-8">
+									<input id="sort" name="classification" th:value="${car.classification}" class="form-control" type="text">
 								</div>
 							</div>
 							<div class="form-group">
