--- a/src/main/resources/templates/h5/sweepCodeRed/index.html
+++ b/src/main/resources/templates/h5/sweepCodeRed/index.html
@@ -3,53 +3,131 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,user-scalable=0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title></title>
 	<link rel="stylesheet" href="/css/h5/sweepCodeRed/common.css">
+	<style>
+		/*键盘样式重写*/
+		div#single-keyboard-box,div#mixed-keyboard-box{height:40%;}
+		div#input-widget{position:absolute;width:84%;height:1rem!important;top:4.4rem;left:.8rem;}
+		div#keyboard-pad{height:27%!important;position:fixed;width:100%;left:-20px;bottom:1.6rem;}
+		div#mixed-keyboard-box,div#single-keyboard-box{border:none!important;}
+		button.key{font-size:.48rem!important;}
+	</style>
 </head>
 <body>
 <div>
-	<div class="con">
+	<span hidden id="carNumber" th:text="${parkingRecord.carNumber}"></span>
+	<h3 class="h3">智慧停车 即刻开启</h3>
+	<div class="con" id="con1">
 		<h4>请输入车牌号</h4>
-		<div>
-			<input type="text" name="" value="京">
-			<input type="text" name="" value="1">
-			<input type="text" name="" value="2">
-			<input type="text" name="" value="3">
-			<input type="text" name="" value="4">
-			<input type="text" name="" value="5">
-			<input type="text" name="" value="6">
-		</div>
-		<i class="iconfont icon-closed"></i>
+		<a href="#" class="btn">查询缴费</a>
 	</div>
 
-	<div class="detail">
-		<p>金额<span style="font-weight: bold;">￥<em th:text="${parkingRecord.cost}"></em></span></p>
-		<p>车牌号<span th:text="${parkingRecord.carNumber}"></span></p>
-		<p>停车场<span th:text="${parkingRecord.parkingName}"></span></p>
-		<p>入场时间<span th:text="${parkingRecord.inTime}"></span></p>
-		<p>停车时长（分钟）<span th:text="${parkingRecord.takeMinutes}" /></p>
-		<div class="payway">
-			<h3 class="tit">支付方式</h3>
-			<div><i class="iconfont icon-wechat" style="color: #3bb034;"></i>微信支付<i class="iconfont icon-danxuan" id="icon-danxuan"></i></div>
+	<div class="show" style="display: none;">
+		<div class="con" id="con2">
+			<h4>请输入车牌号</h4>
 		</div>
-		<div class="notice">
-			<h3 class="tit">注意事项</h3>
-			<p>1.请您支付停车费时，先确认车牌号</p>
+		<div class="detail">
+			<h3 class="tit">停车详情</h3>
+			<p>停车场:<span th:text="${parkingRecord.parkingName}"></span></p>
+			<p>停车时长：<span th:text="${parkingRecord.takeMinutes/60 >=1 ? parkingRecord.takeMinutes/60 + '小时' + parkingRecord.takeMinutes%60 + '分钟' : parkingRecord.takeMinutes/60 + '分钟'}"></span></p>
+			<p>入场时间:<span th:text="${parkingRecord.inTime}"></span></p>
+			<p>停车费:<span><em th:text="${parkingRecord.cost}"></em>元</span></p>
+			<div class="payway">
+				<h3 class="tit">支付方式</h3>
+				<div><i class="iconfont icon-wechat" style="color: #3bb034;"></i>微信支付<i class="iconfont icon-danxuan" id="icon-danxuan"></i></div>
+			</div>
+			<div class="notice">
+				<h3 class="tit">注意事项</h3>
+				<p>1.注意事项1</p>
+			</div>
 		</div>
+
+		<div class="botBtn">
+			<span>还需要支付：<em th:text="${parkingRecord.cost}"></em>元</span>
+			<a href="" class="paybtn">支付</a>
+		</div>
+	</div>
+	<div id="mixed-keyboard-box">
+		<mixed-keyboard :args="args" :callbacks="callbacks"/>
 	</div>
 
-	<div class="botBtn">
-		<span>还需要支付：<em>8元</em></span>
-		<a href="" class="btn">支付</a>
-	</div>
-	
+
 </div>
 </body>
 <script type="text/javascript" src="/js/h5/sweepCodeRed/flexible.js"></script>
 <script type="text/javascript" src="/js/h5/sweepCodeRed/jquery-1.11.2.min.js"></script>
-<script type="text/javascript">
-	$(function(){$(".icon-closed").click(function(){$("input").val("");});});
+<script src="/js/h5/sweepCodeRed/MixedKeyboard.js"></script>
+<script>
+	$(function(){
+		$(".btn").click(function(){
+			$(".show").show();
+			$(".btn").hide();
+			$("#con2").show().css("height","3.6rem");
+			$("#con1").hide();
+			$("div#keyboard-pad").hide();
+		});
+	});
 	$("#icon-danxuan").prop("checked", true).css("color","#14d22d");
+
+
+
+	var number = $("#carNumber").text();
+
+	function native_callback_ontextkey(text){
+		number += text;
+		console.log("当前车牌[KEY]：" + number);
+		_updateKeyboard();
+	}
+
+	function native_callback_ondelkey(){
+		console.log("当前车牌[DEL]：" + number);
+		_updateKeyboard();
+	}
+
+	function native_callback_onokkey(){
+		console.log("当前车牌[OK]");
+	}
+
+	function native_callback_completed(number, isAutoCompleted){
+		console.log("当前车牌[完成]：" + number + ", 自动完成:" + isAutoCompleted);
+	}
+
+	function native_callback_changed(number, isCompleted){
+		console.log("当前车牌[变更]：" + number + ", 已完成:" + isCompleted);
+	}
+
+	function native_callback_show_message(message){
+		console.log(message);
+	}
+
+	function _updateKeyboard(){
+		// native_update_keyboard(presetNumber, keyboardType, provinceName, numberType, inputIndex)
+		native_update_keyboard(number, 0, "广东省", 5, -1);
+	}
+
+	_updateKeyboard();
+
+	// ！！！！！！！！！！！！！！以下为测试代码 ！！！！！！！！！！！！！！！
+	// ！！！！！！！！！！！！！！以下为测试代码 ！！！！！！！！！！！！！！！
+	// ！！！！！！！！！！！！！！以下为测试代码 ！！！！！！！！！！！！！！！
+	// native_update_keyboard("", 2, "广东省");
+
+	// setTimeout(function() {
+	//     native_update_keyboard("", 2, "广东省");
+	// }, 1000);
+
+	// setTimeout(function() {
+	//     native_update_keyboard("粤", 2, "广东省");
+	// }, 2000);
+
+	// setTimeout(function() {
+	//     native_update_keyboard("粤L12", 2, "广东省");
+	// }, 3000);
+
+	// setTimeout(function() {
+	//     native_update_keyboard("", 2, "陕西省");
+	// }, 5000);
 </script>
 </html>
