--- a/src/main/resources/templates/system/car/business/add.html
+++ b/src/main/resources/templates/system/car/business/add.html
@@ -3,60 +3,60 @@
 <meta charset="utf-8">
 <head th:include="include :: header"></head>
 <body class="gray-bg">
-	<div class="wrapper wrapper-content ">
-		<div class="row">
-			<div class="col-sm-12">
-				<div class="ibox float-e-margins">
-					<div class="ibox-content">
-						<form class="form-horizontal m-t" id="signupForm">
-							<input id="parkingType" name="parkingType" value="3" type="hidden">
-							<div class="form-group">
-								<label class="col-sm-3 control-label">客户姓名：</label>
-								<div class="col-sm-8">
-									<input id="name" name="name" class="form-control" type="text">
-								</div>
-							</div>
-							<div class="form-group">
-								<label class="col-sm-3 control-label">客户电话：</label>
-								<div class="col-sm-8">
-									<input id="phone" name="phone" class="form-control" type="text">
-								</div>
-							</div>
-							<div class="form-group">	
-								<label class="col-sm-3 control-label">车牌号：</label>
-								<div class="col-sm-8">
-									<input id="number" name="number" class="form-control" type="text">
-								</div>
-							</div>
-							<div class="form-group">
-								<label class="col-sm-3 control-label">免费时长(分钟)：</label>
-								<div class="col-sm-8">
-									<input id="freeTime" name="freeTime" class="form-control" type="text">
-								</div>
-							</div>
-							<div class="form-group">
-								<label class="col-sm-3 control-label">状态:</label>
-								<div class="col-sm-8">
-									<label class="radio-inline"> <input type="radio"
-																		name="status" value="1" /> 正常
-									</label> <label class="radio-inline"> <input type="radio"
-																				 name="status" value="0" /> 禁用
-								</label>
-								</div>
-							</div>
-							<div class="form-group">
-								<div class="col-sm-8 col-sm-offset-3">
-									<button type="submit" class="btn btn-primary">提交</button>
-								</div>
-							</div>
-						</form>
-					</div>
-				</div>
-			</div>
-	</div>
-	</div>
-	<div th:include="include::footer"></div>
-	<script type="text/javascript" src="/js/appjs/sys/car/business/add.js">
-	</script>
+<div class="wrapper wrapper-content ">
+    <div class="row">
+        <div class="col-sm-12">
+            <div class="ibox float-e-margins">
+                <div class="ibox-content">
+                    <form class="form-horizontal m-t" id="signupForm">
+                        <input id="parkingType" name="parkingType" value="3" type="hidden">
+                        <div class="form-group">
+                            <label class="col-sm-3 control-label">车牌号：</label>
+                            <div class="col-sm-8">
+                                <label><input id="number" name="number" class="form-control" type="text"></label>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label class="col-sm-3 control-label">客户姓名：</label>
+                            <div class="col-sm-8">
+                                <label><input id="name" name="name" class="form-control" type="text"></label>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label class="col-sm-3 control-label">客户电话：</label>
+                            <div class="col-sm-8">
+                                <label><input id="phone" name="phone" class="form-control" type="text"></label>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label class="col-sm-3 control-label">免费时长(分钟)：</label>
+                            <div class="col-sm-8">
+                                <label><input id="freeTime" name="freeTime" class="form-control" type="text"></label>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label class="col-sm-3 control-label">状态:</label>
+                            <div class="col-sm-8">
+                                <label class="radio-inline"> <input type="radio"
+                                                                    name="status" value="1" checked/> 正常
+                                </label> <label class="radio-inline"> <input type="radio"
+                                                                             name="status" value="0"/> 禁用
+                            </label>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <div class="col-sm-8 col-sm-offset-3">
+                                <button type="submit" class="btn btn-primary">提交</button>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<div th:include="include::footer"></div>
+<script type="text/javascript" src="/js/appjs/sys/car/business/add.js">
+</script>
 </body>
 </html>
