--- a/src/main/resources/templates/system/car/long/edit.html
+++ b/src/main/resources/templates/system/car/long/edit.html
@@ -23,19 +23,19 @@
 							<div class="form-group">	
 								<label class="col-sm-3 control-label">车牌号：</label>
 								<div class="col-sm-8">
-									<input id="number" name="number" th:value="${car.number}" class="form-control" type="text">
+									<label><input id="number" name="number" th:value="${car.number}" class="form-control" type="text"></label>
 								</div>
 							</div>
 							<div class="form-group">
 								<label class="col-sm-3 control-label">生效日期：</label>
 								<div class="col-sm-8">
-									<input name="beginDate" th:value="${car.beginDate}" type="text" class="demo-input" placeholder="请选择生效日期" id="beginDate">
+									<label><input name="beginDate" th:value="${car.beginDate}" type="text" class="demo-input" placeholder="请选择生效日期" id="beginDate"></label>
 								</div>
 							</div>
 							<div class="form-group">
 								<label class="col-sm-3 control-label">失效日期：</label>
 								<div class="col-sm-8">
-									<input name="endDate" th:value="${car.endDate}" type="text" class="demo-input" placeholder="请选择失效日期" id="endDate">
+									<label><input name="endDate" th:value="${car.endDate}" type="text" class="demo-input" placeholder="请选择失效日期" id="endDate"></label>
 								</div>
 							</div>
 							<div class="form-group">
