--- a/src/main/resources/templates/system/car/vip/edit.html
+++ b/src/main/resources/templates/system/car/vip/edit.html
@@ -24,7 +24,7 @@
 							<div class="form-group">	
 								<label class="col-sm-3 control-label">车牌号：</label>
 								<div class="col-sm-8">
-									<input id="number" name="number" th:value="${car.number}" class="form-control" type="text">
+									<label><input id="number" name="number" th:value="${car.number}" class="form-control" type="text"></label>
 								</div>
 							</div>
 							<div class="form-group">
